@@ -24,11 +24,13 @@
       Game icons provided by <a href="http://gameicons.net">game-icons.net</a> under a CC-BY license.
       <ul>
         <li>Flame by <a href="https://twitter.com/unstoppableCarl">Carl Olson</a></li>
-        <li>Carnyx by Cathelineau</li>
+        <li>Carnyx and Holy Oak by Cathelineau</li>
         <li>Hooded Figure by <a href="http://darkzaitzev.deviantart.com">DarkZaitev</a></li>
         <li>Bindle by <a href="http://delapouite.com">Delapouite</a></li>
         <li>Nautilus shell by <a href="http://fungustoken.deviantart.com">Faithtoken</a></li>
         <li>Elf helmet by Kier Heyl</li>
+        <li>Armoured pants by <a href="http://ecesisllc.wix.com/home
+- HeavenlyDog>">Irongamer</a></li>
     </ul>
     </p>
 
