@@ -1,2 +1,3 @@
+03/08/19 -- Replaced the Glitch button
 03/08/19 -- Fixed the restart button to handle picDict
 03/08/19 -- Responsiveness: added portrait and landscape screens
